# AIRenta

./: .pre-commit-config.yaml  pyproject.toml  test.py
services/mock_realty_service/: main.py  models.py
services/tg_bot_service/: apartment_utils.py  client.py  config.py  main.py
